Began implementing listing page.

--- a/auctions/templates/auctions/index.html
+++ b/auctions/templates/auctions/index.html
@@ -5,10 +5,12 @@
 
     <ul class="list-group list-group-flush">
           {% for listing in listings %}
-          <li class="list-group-item">
-            <img style="width: 200px; height:200px;"src="{{listing.picture}}" alt="{{listing.title}}">
-            <p>{{ listing.title }} {{ listing.description }} Current Price: {{listing.starting_bid}}</p>
-          </li>
+            <li class="list-group-item">
+              <a href="{% url 'item' listing.title %}">
+                <img style="width: 200px; height:200px;"src="{{listing.picture}}" alt="{{listing.title}}">
+                <p>{{listing.title}} {{listing.description}} Current Price: {{listing.starting_bid}}</p>
+              </a>
+            </li>
           {% endfor %}
     </ul>
 
