--- a/auctions/templates/auctions/create_listing.html
+++ b/auctions/templates/auctions/create_listing.html
@@ -4,8 +4,13 @@
 <form action="{% url 'index' %}" method="post">
   {% csrf_token %}
   <div class="form-group">
+    {% if message %}
+      <div>
+        {{message}}
+      </div>
+    {% endif %}
     <label for="title">Title:</label>
-    <input type="text" class="form-control" name="title" id="title" placeholder="Enter the title of the item"> 
+    <input type="text" class="form-control" name="title" id="title" placeholder="Enter the title of the item">
     <label for="starting_price">Starting Price:</label>
     <input type="number" class="form-control" name="starting_price" id="starting_price" placeholder="Enter the starting price of the item">
     <label for="description">Description:</label>
@@ -13,7 +18,6 @@
     <label for="picture">Insert a picture of the item (optional):</label>
     <input type="url" class="form-control" name="picture" id="picture" placeholder="Enter the URL for the picture">
     <label for="category">Select a category:</label>
-
     <select class="form-control" name="category" id="category">
       {% for category in categories %}
       <option>{{ category }}</option>
