--- a/auctions/templates/auctions/listingsWon.html
+++ b/auctions/templates/auctions/listingsWon.html
@@ -8,8 +8,16 @@
   {% for item in items %}
     <li class="list-group-item">
       <a href="{% url 'item' item.title %}">
-        <img style="width: 200px; height:200px;"src="{{item.picture}}" alt="{{item.title}}">
-        <p>{{item.title}} {{item.description}} Current Price: {{item.starting_bid}}</p>
+        <div class="row">
+          <div class="col-2">
+            <img  class="rounded float-left" style="width: 200px; height:200px;"src="{{item.picture}}" alt="{{listing.title}}">
+          </div>
+          <div class="col-3">
+            <p>{{item.title}}</p>
+            <p>{{item.description}}</p>
+            <p>Current Price: {{item.starting_bid}}</p>
+          </div>
+        </div>
     </li>
   {% endfor %}
 </ul>
